Added config system

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,9 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake-modules"
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}")
 
 find_package(SDL2 REQUIRED)
+find_package(YAMLCPP REQUIRED)
 
-set(SOURCE_FILES main.cpp Util/Coords.cpp Util/Cleanup.h Util/RandomNumberGen.cpp Ant.cpp AntManager.cpp Application.cpp Drawer.cpp Field.cpp Util/GetSDL.h Util/RGB.h Util/RGB.cpp)
+set(SOURCE_FILES main.cpp Util/Coords.cpp Util/Cleanup.h Util/RandomNumberGen.cpp Ant.cpp AntManager.cpp Application.cpp Drawer.cpp Field.cpp Util/GetSDL.h Util/RGB.h Util/RGB.cpp Util/TileState.h ConfigManager.cpp ConfigManager.h Util/TileDirection.h)
 add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
-include_directories(${SDL2_INCLUDE_DIR})
-target_link_libraries(${CMAKE_PROJECT_NAME} ${SDL2_LIBRARY})
+include_directories(${SDL2_INCLUDE_DIR} ${YAMLCPP_INCLUDE_DIR})
+target_link_libraries(${CMAKE_PROJECT_NAME} ${SDL2_LIBRARY} ${YAMLCPP_LIBRARY})
